[2단계 - 출석 다시 구현하기] 후유(김대동) 미션 제출합니다. (#165)
* remove: 출석 다시 구현하기 위해 구현한 코드 삭제

* docs: 구현할 기능 목록 추가

* feat: 출석 기능 추가

* refector: 닉네임 문자열을 포장하도록 수정

* refector: 일급 컬렉션을 사용하도록 수정

* refector: 시간 값을 LocalTime을 사용하도록 수정

* refector: 인스턴스 변수 접근 제어자 및 final 누락 수정

* feat: 이미 출석했는지 확인하는 기능 추가

* refector: 매개변수 이름 수정

* refector: 테스트를 기능 단위로 묶도록 inner class 추가

* refector: 필요 없는 포매터 삭제

* refector: 테스트를 기능 단위로 묶도록 inner class 추가

* feat: 출석 기록을 관리하는 클래스 추가

* refector(Attendances): 출석 기록 객체를 사용하도록 수정

* refector(AttendanceManager): 출석 기록 객체를 사용하도록 수정

* feat: 출석 수정 기능 추가

* refector: 출석 기록 클래스 정적 팩토리 메서드 추가

* refector: 동일 날짜의 출석 기록을 확인하는 테스트 케이스 추가

* refector: 디버그를 위한 toString 재정의 추가

* Test: 누락된 출석 기록 생성 테스트 추가

* feat: 크루별 출석 기록 확인 기능 추가

* feat: 날짜들로부터 출석 기록을 확인하는 기능 추가

* refector: 출석 기록 객체를 생성하지 않고 날짜 동등성을 비교할 수 있도록 수정

* feat: 프로그램의 흐름을 제어하는 컨트롤러 추가

* refector: 인스턴스 변수명 간결하게 수정

* feat: 출석 등록 과정의 입출력 기능 추가

* feat: 출석 기록으로부터 출석 상태를 계산하는 기능 추가

* feat: 요일별 지각, 결석 시간을 계산하는 기능 추가

* refector: 출결 상태를 관리하는 객체가 지각, 결석 시간 가지는 책임을 제거하도록 수정

* feat: 출석 등록 후 출석 상태를 출력하는 기능 추가

* feat: 사용자가 종료할 때까지 프로그램이 종료되지 않는 기능 추가

* feat: 이미 출석한 경우, 수정 기능을 안내하는 기능 추가

* feat: 잘못된 기능을 입력하면 다시 입력하도록 안내하는 기능 추가

* feat: 등록되지 않은 닉네임을 입력하면 예외가 발생하는 기능 추가

* feat: attendances.csv 파일을 읽어 출석 기록을 불러오는 기능 추가

* feat: 등록되지 않은 닉네임을 입력하면 에러 메시지를 출력하는 기능 추가

* feat: 날짜가 주어졌을 때 출석 가능한 날짜인지 확인하는 기능 추가

* feat: 휴일 및 주말에는 출석을 등록하면 예외가 발생하는 기능 추가

* feat: 캠퍼스 운영 시간 외 출석을 등록하면 예외가 발생하는 기능 추가

* docs: 누락된 구현 기능 사항 추가

* refector: 함수형 인터페이스를 사용해 메서드 길이를 줄이도록 수정

* docs: 누락된 구현 기능 목록 추가

* refector: 예외를 캐치하여 에러메시지를 출력하도록 수정

* feat: 출석 기록과 동일한 날짜의 출석 기록을 가져오는 기능 추가

* feat: 닉네임과 출석 기록으로 동일한 날짜의 출석 기록을 가져오는 기능 추가

* feat: 출석 수정 과정의 입출력 기능 추가

* refector: 출석 확인 기능 테스트의 확인 값 수정

* feat: 출석 기록들로부터 출석 상태 개수를 계산하는 기능 추가

* feat: 출석 상태 개수로부터 경고 상태를 계산하는 기능 추가

* feat: 크루별 출석 기록 확인 과정의 입출력 기능 추가

* feat: 제적 위험자 확인 과정의 입출력 기능 추가

* style: 가독성을 위한 줄바꿈 추가

* fix: 미출석자를 결석으로 처리하지 않던 버그 수정

* refector: 매직 넘버로 사용하던 날짜를 Cu